--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "@storyofams/next-password-protect": "^1.5.12",
     "axios": "^0.24.0",
+    "cookie": "^0.4.1",
     "csvtojson": "^2.0.10",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.0.3",
     "pretty-checkbox": "^3.0.3",
     "pretty-checkbox-react": "^3.2.0",
